--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-sortable": "^2.0.0",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.15.1",
     "sortablejs": "^1.15.6"
   },
   "devDependencies": {
