--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "cloudinary": "^1.41.0",
     "cordova-plugin-file": "^8.0.0",
+    "date-fns": "^4.1.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "multiparty": "^4.2.3",
